# rs-ints2arrow

./: Cargo.toml  README.md  doc-web.sh
examples/ints2arrow/: Cargo.toml  build.sh  ints2arrow  run.sh
examples/ints2arrow/src/: main.rs
src/: sync.rs
src/sync/: fs.rs
