[package]
name = "rs-ints2arrow"
version = "0.1.0"
edition = "2024"

description = "Convert integers to an Arrow array."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-ints2arrow"
homepage = "https://github.com/takanoriyanagitani/rs-ints2arrow"
documentation = "https://docs.rs/rs-ints2arrow/latest"
keywords = ["integers", "arrow", "raw", "binary", "convert"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[features]
default = [
	"sync",
	"fs",
]

sync = [
]

fs = [
]
